Fixed wrong font.

--- a/media/css/main.css
+++ b/media/css/main.css
@@ -20,7 +20,7 @@
 body {
   background-color: #1a1a1a;
   color: #bebabc;
-  font: 12pt "Calibri";
+  font: 12pt "Liberation Sans";
   color: #e5e1de;
 }
  
